# gameserver

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  README.local.md  README.md  deployment.yaml  docker-compose.yml  encode_decode.md  fly.toml  justfile  readme.md
apps/achtung-baseline/: .dockerignore  Dockerfile  main.py  pyproject.toml
apps/achtung-example/: pyproject.toml
apps/agent-deploy/: .dockerignore  Dockerfile  pyproject.toml
apps/agent-deploy/src/agent_deploy/: main.py  service.py  test.py
apps/agent-deploy/src/agent_deploy/protos/: deploy_service_pb2.py  deploy_service_pb2.pyi  deploy_service_pb2_grpc.py
apps/build-service/: Dockerfile  app.py  main.py  pyproject.toml
apps/build-service/protos/: build_service_pb2.py  build_service_pb2.pyi  build_service_pb2_grpc.py
apps/build-service/src/build_service/: deploy.py
apps/cli/: Cargo.toml
apps/cli/src/: client.rs  main.rs
apps/deploy-service/: Dockerfile  pyproject.toml
apps/deploy-service/src/deploy_service/: deploy.py  main.py
apps/deploy-service/src/deploy_service/protos/: deploy_service_pb2.py  deploy_service_pb2.pyi  deploy_service_pb2_grpc.py
apps/website/: Cargo.toml  Dockerfile  README.md  build.rs  index.html  rust-analyzer.toml  tailwind.config.js
apps/website/.sqlx/: query-0464f274ca0eae0bfae83cbdc3ab77deb76cff7883802676b4f93f2baa2e4387.json  query-0c6649d53a289dcf62bc689fa58a8a7503da05f496f35bedfc0f40264e62bff5.json  query-0d7767da477b43c0adad7386c2ae1cbe30937e348b9b070cf5895cee5a63d3e3.json  query-10fe99d6789c1b7de5417abecaf1411c48071c1a7a05f61daad3b2234ad377d8.json  query-27d56813b53688f9eb445cda07d2cdd960d1ad8628e1fe0312b8da4c9b7994b0.json  query-3f054ff6de0a3d38405bfe0a03614b136f9707657bdf3c425367e9b42f40984a.json  query-6eb8f5167acd251374bfb189c4a59eea7665a41182d586aba7130c05dd12b622.json  query-73d25354dc5e658726069d9e30d3a9be994a5461295cb984921b1e834659a0f1.json  query-84a77e84f3aa73c907c7f2555ee4e90c1ad2049ead7a85fc0ae5b46df1db1f62.json  query-a47d45d6f5074f080180393ea363916a904ea5aeca6a1a21e33c3bcf3e658be1.json  query-a768902440329c7bf35fabe589bcaf7bbccb91d2f5cf3aa0eb56bfa774bd5ba4.json  query-ae9b2458176328fa33bc3994265daf0fdaffb09808e163d8062e52e4990b15af.json  query-ba606812a2a24c2211bc10670b44014f1db4b8349c6ada00cfd231f690a92038.json  query-fb570330473381a0a5ab99d9ca4c7e01ca38b6680637905d907e7c01f2fc864a.json  query-fbe58bc603c38d0fb02c2177fec21666eea9369ccdf849695d667d785547b6d6.json
apps/website/migrations/: 20231108213118_init.sql  20251108142600_image_url_none_null copy.sql  20251111000000_registry_tokens.sql  20251124181008_system_tokens.sql
apps/website/public/: achtung-observer.js  styles.css
apps/website/src/: agents.rs  app.rs  lib.rs  main.rs  users.rs  web.rs
apps/website/src/agents/: agent.rs  deploy.rs  manager.rs  mod.rs
apps/website/src/components/: achtung_live.rs  mod.rs  page.rs  sidebar.rs  upload_form.rs
apps/website/src/pages/: agents.rs  home.rs  live_battle.rs  mod.rs  not_found.rs  settings.rs  stats.rs
apps/website/src/registry/: auth.rs  client.rs  manager.rs  mod.rs  token.rs
apps/website/src/tokens/: manager.rs  mod.rs  token.rs
apps/website/src/web/: app.rs  auth.rs  components.rs  layouts.rs  mod.rs  oauth.rs  pages.rs  protected.rs  public.rs
apps/website/src/web/layout/: components.rs  pages.rs
apps/website/src/web/protected/: mod.rs  (+2 more)
apps/website/static/: achtung-observer.js
apps/website/templates/: base.html
apps/website/templates/components/: achtung_live.html  page.html  sidebar.html
apps/website/templates/pages/: index.html  login.html  new_agent.html  protected.html
apps/website/tests/: test.rs
apps/website3/: Cargo.toml  Dockerfile
apps/website3/src/: main.rs  users.rs  web.rs
apps/website3/src/web/: app.rs  auth.rs  frontpage.rs  protected.rs  public.rs
apps/website3/static/: achtung-observer.js
apps/website3/templates/: achtung_live.html  base.html  index.html  sidebar.html
apps/website3/templates/pages/: agents.html
build-server/: Dockerfile  app.py  deployment.yaml  pyproject.toml
client/: Dockerfile  achtung.py  client.py  deployment.yaml  example.py  game.py  game_client.py  pyproject.toml  strategy.py
libs/agent-infra/: Cargo.toml  Dockerfile  build.rs
libs/agent-infra/src/: fly_api.rs  lib.rs  reaper.rs  registry_client.rs  server.rs
libs/api/: Cargo.toml
libs/api-types/: Cargo.toml
libs/api-types/src/: client.rs  lib.rs  routes.rs
libs/api/src/: agents.rs  auth.rs  error.rs  lib.rs  registry.rs  tokens.rs
libs/coordinator/: Cargo.toml  build.rs
libs/coordinator/src/: lib.rs
libs/core/: Cargo.toml
libs/core/.sqlx/: query-59ff4919c6f1bda4ce856bb185fe37b7cbcd0a7b725269addc5a3de0f3e5f60d.json  query-639e6dc2274f93bdf4b6432c13e30a25fe72491c60feed1bd42d9917565bcc07.json  query-66bd236126c3ec8fae20c4b88f5576074f22919e6b431fb3f79f64d46b17a1f8.json  query-7b18037eb5e3f4dc9baa3ddea962fcbda4d52945d9f20358cd077c86abebdc5a.json  query-a42895f4ed613444ce0379115894e06f6c71edebf617e573a8f11172186a526c.json  query-b1bf91b89d2408853be1e899bb4243e2ec63c9e850f45f399f4698c5c2833bae.json  query-b959d7fa03fd448dac778be465d07f835b73f3492efc5d2837500c1606c790b3.json  query-c19c8648d4e5af8d26067d8edd6f75eae2a1f490b3742741b352afa1a939a290.json  query-dd1021afebae59d0658f858891a6e608a8a50902d23d3573573f38e346814668.json  query-fa1cf2bf98d344d3a20c9721d06d385f1c92dd1a61cf019a7043d06b991e1044.json
libs/core/migrations/: 20241108213118_init.sql  20250312204720_bruh.sql  20250312204922_bruh.sql  20250313084442_fix_agent_status.sql  20250314000000_external_registry copy.sql  20251108142600_image_url_none_null copy.sql  20260202000000_api_tokens.sql
libs/core/src/: api_tokens.rs  db.rs  lib.rs  users.rs
libs/core/src/agents/: agent.rs  manager.rs  mod.rs
libs/core/src/registry/: client.rs  manager.rs  mod.rs
libs/game-host/: Cargo.toml
libs/game-host/src/: server.rs
libs/game-host/src/games/: achtung.rs
libs/registry-auth/: Cargo.toml
libs/registry-auth/src/: auth.rs  lib.rs  storage.rs  token.rs
libs/registry-auth/tests/: test.rs
(+91 files in other folders)
