[tool.poetry]
name = "givakt"
version = "0.1.0"
description = ""
authors = ["Aske Ching <aske@daske.dk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
pydantic = "^2.4.2"
websockets = "^12.0"
attrs = "^23.1.0"

[tool.poetry.group.dev.dependencies]
black = "^23.10.0"
ruff = "^0.1.1"

[tool.ruff]
line-length = 120

[tool.ruff.isort]
# Use a single line after each import block.
lines-after-imports = 1

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
