[project]
name = "achtung-baseline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "game-client",
]

[dependency-groups]
dev = [
    "ruff>=0.7.3",
]

[tool.uv.sources]
game-client = { path = "../../libs/game-client" }

[tool.ruff]
line-length = 120

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint.isort]
# Use a single line after each import block.
lines-after-imports = 1
