[project]
name = "achtung-baseline"
version = "0.1.0"
description = "Reinforcement learning baseline for the Achtung! game."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "arcadio-client",
]

[dependency-groups]
dev = [
    "ruff>=0.7.3",
]

[tool.ruff]
line-length = 120

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint.isort]
# Use a single line after each import block.
lines-after-imports = 1

[tool.uv.sources]
arcadio-client = { path = "../../libs/arcadio-client", editable = true }

