[package]
name = "achtung-cli"
description = "Command line interface for the Achtung platform"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "achtung"
path = "src/main.rs"

[dependencies]
api-types = { path = "../../libs/api-types", package = "achtung-api-types", features = ["client"] }
common = { path = "../../libs/common" }
clap = { workspace = true }
dirs = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
