[package]
name = "website"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
achtung-ui = { path = "../../libs/ui" }
registry-auth = { path = "../../libs/registry-auth" }
async-trait = { workspace = true }
axum = { workspace = true }
axum-login = { workspace = true }
base64 = { workspace = true }
bcrypt = { workspace = true }
http = { workspace = true }
hyper = { workspace = true }
maud = { workspace = true }
oauth2 = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tower-sessions-sqlx-store = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
