[package]
name = "website"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
achtung-api = { path = "../../libs/api" }
achtung-core = { path = "../../libs/core", features = ["axum-login"] }
achtung-ui = { path = "../../libs/ui" }
agent-infra = { path = "../../libs/agent-infra", package = "achtung-agent-infra" }
coordinator = { path = "../../libs/coordinator" }
registry-auth = { path = "../../libs/registry-auth" }
async-trait = { workspace = true }
axum = { workspace = true }
axum-login = { workspace = true }
maud = { workspace = true }
oauth2 = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
tower-sessions-sqlx-store = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
