[package]
name = "website"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
askama = { version = "0.12.1" }
async-trait = "0.1.86"
axum = "0.8.1"
axum-login = "0.17.0"
http = "1.0.0"
hyper = "1.0.1"
oauth2 = "4.4.2"
reqwest = { version = "0.12.12", features = ["json"] }
serde = "1"
sqlx = { version = "0.8.1", features = ["sqlite", "time", "runtime-tokio"] }
thiserror = "2.0.0"
time = "0.3.30"
tokio = { version = "1.34.0", features = ["full"] }
tower = "0.5.2"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
