[package]
name = "achtung-agent-infra"
description = "Agent infrastructure management - machine provisioning for game matches"
version = "0.1.0"
edition = "2024"

[lib]
name = "agent_infra"
path = "src/lib.rs"

[dependencies]
governor = { workspace = true }
nonzero_ext = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
trait-variant = { workspace = true }
tracing = { workspace = true }
