[package]
name = "arcadio"
version = "0.1.1"
edition = "2021"
description = "Reinforcement learning framework for flash-like games."
license = "MIT"
repository = "https://github.com/ch1nq/gameserver"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = { workspace = true }
log = { workspace = true }
pretty_env_logger = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
warp = { workspace = true }
