[package]
name = "registry-auth"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.6"
base64 = "0.22.1"
bcrypt = "0.17.1"
jsonwebtoken = { version = "10.2.0", features = ["hmac", "rust_crypto"] }
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["postgres", "time", "runtime-tokio"] }
thiserror = "2.0.17"
time = "0.3.44"
tracing = "0.1.41"
uuid = { version = "1.18.1", features = ["v4"] }
