[package]
name = "registry-auth"
description = "Docker registry token authentication"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
async-trait = { workspace = true }
axum = { workspace = true, optional = true }
base32 = { workspace = true }
base64 = { workspace = true }
bcrypt = { workspace = true }
http = { workspace = true, optional = true }
jsonwebtoken = { workspace = true }
rand = { workspace = true }
rsa = { workspace = true }
serde = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[features]
default = ["axum-integration"]
axum-integration = ["axum", "http"]
